# RESCOL

./: .gitignore  AntColonySystem.cpp  AntColonySystem.h  CMakeLists.txt  EjecutarMultiple.ps1  FormatoInstanciaRESCOL.txt  Grafico.py  Main.cpp  POSTDB.py  README.md  Viewer.cpp  Visualizador.py  aco.cpp  aco.h  antsystem.cpp  antsystem.h  config.h  enums.h  generador_numeros_aleatorios.cpp  generador_numeros_aleatorios.h  graph.h  handlerJSON.cpp  helpers.cpp  helpers.h  instance_reader.cpp  instance_reader.h  minmax.cpp  minmax.h  oscilador.cpp  oscilador.h  test.cpp  test.h
Instancias/: CasoRealChiquito.txt  CasoRealGrande.txt  CasoRealGrande_variante_gamma_1.txt  CasoRealGrande_variante_gamma_10.txt  CasoRealGrande_variante_gamma_11.txt  CasoRealGrande_variante_gamma_12.txt  CasoRealGrande_variante_gamma_13.txt  CasoRealGrande_variante_gamma_14.txt  CasoRealGrande_variante_gamma_15.txt  CasoRealGrande_variante_gamma_16.txt  CasoRealGrande_variante_gamma_17.txt  CasoRealGrande_variante_gamma_18.txt  CasoRealGrande_variante_gamma_19.txt  CasoRealGrande_variante_gamma_2.txt  CasoRealGrande_variante_gamma_20.txt  CasoRealGrande_variante_gamma_3.txt  CasoRealGrande_variante_gamma_4.txt  CasoRealGrande_variante_gamma_5.txt  CasoRealGrande_variante_gamma_6.txt  CasoRealGrande_variante_gamma_7.txt  CasoRealGrande_variante_gamma_8.txt  CasoRealGrande_variante_gamma_9.txt  CasoRealGrande_variante_normal_1.txt  CasoRealGrande_variante_normal_10.txt  CasoRealGrande_variante_normal_11.txt  CasoRealGrande_variante_normal_12.txt  CasoRealGrande_variante_normal_13.txt  (+66 more)
(+20 files in other folders)
